# linux-share-server

./: .gitignore  Cargo.toml  Rocket.toml
login/: login.html
src/: main.rs  verify.rs
