[package]
name = "linuxshare-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.0.0"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "tls"] }
jsonwebtoken = "8.3.0"
reqwest = {version = "0.11.4", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }